syntax = "proto3";

package iunite.club.srv.organization.club;

import "iunite.club/services/organization/proto/organization.proto";
import "google/protobuf/any.proto";

service Club {
  rpc CreateClub(CreateClubRequest) returns(CreateClubResponse) {}
  // FindClubListByPage 获取社团列表
  rpc FindClubListByPage(GetClubListRequest) returns(ClubListResponse) {}
  rpc GetClubsByUserID(GetClubsByUserIDRequest) returns(ClubListResponse) {}
  rpc AcceptJoinOneClub(AcceptJoinOneClubRequest) returns(Response) {}
  rpc ExecuteJoinClubAccept(ExecuteJoinClubAcceptRequest) returns(Response) {}
  rpc SearchClubs(SearchClubRequest) returns(ClubListResponse) {}
  rpc FindRefusedAcceptByUserID(FindRefusedAcceptRequest) returns(AcceptListResponse) {}
  rpc FindClubDetailsByID(GetClubByIDRequest) returns(ClubDetailsResponse) {}
  rpc UpdateClubInfo(UpdateClubInfoRequest) returns(UpdatedResponse) {}
  rpc FindClubsBySchoolID(GetClubsBySchoolIDRequest) returns(ClubListResponse) {}
  rpc GetUserClubProfilesByUserID(GetUserClubProfilesByUserIDRequest) returns(UserClubProfilesListResponse) {}
  rpc GetUserClubProfileDetailsByID(GetUserClubProfileDetailsByIDRequest) returns(UserClubProfileResponse) {}
  // rcp GetOrganizationDetails()
  rpc RemoveUserFromClub(RemoveUserFromClubRequest) returns(Response) {}
  rpc FindUserClubProfiles(FindUserClubProfilesRequest) returns(UserClubProfilesResponse) {}
  rpc FindAcceptByUserClubProfileID(ByUserClubProfileIDRequest) returns(AcceptResponse) {}

}

message ByUserClubProfileIDRequest {
  string ID = 1;
}

message AcceptResponse {
  string ID = 1;
  string UserID = 2;
  string OrganizationID = 3;
  int32 State = 4;
  int32 Kind = 5;
}

message UserClubProfilesResponse {
  repeated iunite.club.srv.organization.UserClubProfile UserClubProfiles = 1;
  int32 Total = 2;
}

message FindUserClubProfilesRequest {
  string DepartmentID = 1;
  string JobID = 2;
  string Category = 3;
  string Search = 4;
  int64 Page = 5;
  int64 Limit = 6;
  string ClubID = 7;
}

message RemoveUserFromClubRequest {
  string UserID = 1;
  string ClubID = 2;
}

message GetUserClubProfileDetailsByIDRequest {
  string OrganizationID = 1;
  string UserID = 2;
}

message UserClubProfileResponse {
  iunite.club.srv.organization.UserClubProfile UserClubProfile = 1;
}

message GetUserClubProfilesByUserIDRequest {
  string UserID = 1;
}

message UserClubProfilesListResponse {
  int64 Total = 1;
  repeated iunite.club.srv.organization.UserClubProfile UserClubProfiles = 2;
  string FirstID = 3;
  string LastID = 4;
}

message GetClubsBySchoolIDRequest {
  string SchoolID = 1;
}

message UpdateClubInfoRequest {
  string ID = 1;
  bytes ToSet = 2;
}

message UpdatedResponse {
  bool OK = 1;
  string UpdateAt = 2;
}

message GetClubByIDRequest {
  string ID = 1;
}

message ClubDetailsResponse {
  iunite.club.srv.organization.Organization Club = 1;
}

message FindRefusedAcceptRequest {
  string UserID = 1;
  int64 Page = 2;
  int64 Limit = 3;
}


message SearchClubRequest {
  string Search = 1;
  int64 Page = 2;
  int64 Limit = 3;
}

message ExecuteJoinClubAcceptRequest {
  bool IsPassed = 1;
  string AcceptID = 2;
}

message Response {
  bool OK = 1;
}

message AcceptJoinOneClubRequest {
  string UserID = 1;
  string ClubID = 2;
  string JobID = 3;
  string DepartmentID = 4;
}

message GetClubsByUserIDRequest {
  int64 Page = 1;
  int64 Limit = 2;
  string UserID = 3;
}

message CreateClubRequest {
  string Name = 1;
  string SchoolID = 2;
  int32 Scale = 3;
  repeated string Paperworks = 4;
  string CreatorID = 5;
}

message CreateClubResponse {
  bool OK = 1;
}

message GetClubListRequest {
  string SinceFlag = 1;
  string MaxFlag = 2;
  int64 page = 3;
  int64 limit = 4;
}

message ClubListResponse {
  int64 Total = 1;
  repeated iunite.club.srv.organization.Organization Organizations = 2;
  string FirstID = 3;
  string LastID = 4;
}

message AcceptListResponse {
  int64 Total = 1;
  repeated iunite.club.srv.organization.ClubAccept Accepts = 2;
  string FirstID = 3;
  string LastID = 4;
}