syntax = "proto3";

package iunite.club.srv.organization;


message Organization {
  string ID = 9;
  string Kind = 1;
  string Name = 2;
  string Slug = 3;
  string SchoolID = 4;
  string Description = 5;
  string ParentID = 6;
  ClubProfile ClubProfile = 7;
  repeated Job Jobs = 8;
}

message Job {
  string ID = 1;
  string Name  = 2;
  string Slug = 3;
}

message Paperwork {
  string FileID = 1;
  string UploadAt = 2;
}

message ClubProfile {
  string Logo = 1;
  int32 Scale = 2;
  repeated Paperwork Paperworks = 3;
}